--- a/plugins/channel/CMakeLists.txt
+++ b/plugins/channel/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(demod)
 
 add_subdirectory(lora)
-add_subdirectory(nfm)
-add_subdirectory(ssb)
+#add_subdirectory(nfm)
+#add_subdirectory(ssb)
 add_subdirectory(tcpsrc)
-add_subdirectory(wfm)
+#add_subdirectory(wfm)
 
