Add experimental NFM to alsaless branch.

--- a/plugins/channel/CMakeLists.txt
+++ b/plugins/channel/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(demod)
 
 add_subdirectory(lora)
+add_subdirectory(ax)
 #add_subdirectory(nfm)
 #add_subdirectory(ssb)
 add_subdirectory(tcpsrc)
