--- a/plugins/channel/ax/CMakeLists.txt
+++ b/plugins/channel/ax/CMakeLists.txt
@@ -1,18 +1,18 @@
-project(nfm)
+project(ax)
 
-set(nfm_SOURCES
+set(ax_SOURCES
 	nfmdemod.cpp
 	nfmdemodgui.cpp
 	nfmplugin.cpp
 )
 
-set(nfm_HEADERS
+set(ax_HEADERS
 	nfmdemod.h
 	nfmdemodgui.h
 	nfmplugin.h
 )
 
-set(nfm_FORMS
+set(ax_FORMS
 	nfmdemodgui.ui
 )
 
@@ -29,19 +29,19 @@ add_definitions(${QT_DEFINITIONS})
 add_definitions(-DQT_PLUGIN)
 add_definitions(-DQT_SHARED)
 
-#qt5_wrap_cpp(nfm_HEADERS_MOC ${nfm_HEADERS})
-qt5_wrap_ui(nfm_FORMS_HEADERS ${nfm_FORMS})
+#qt5_wrap_cpp(ax_HEADERS_MOC ${ax_HEADERS})
+qt5_wrap_ui(ax_FORMS_HEADERS ${ax_FORMS})
 
-add_library(demodnfm SHARED
-	${nfm_SOURCES}
-	${nfm_HEADERS_MOC}
-	${nfm_FORMS_HEADERS}
+add_library(demodax SHARED
+	${ax_SOURCES}
+	${ax_HEADERS_MOC}
+	${ax_FORMS_HEADERS}
 )
 
-target_link_libraries(demodnfm
+target_link_libraries(demodax
 	${QT_LIBRARIES}
 	${OPENGL_LIBRARIES}
 	sdrbase
 )
 
-qt5_use_modules(demodnfm Core Widgets OpenGL Multimedia)
+qt5_use_modules(demodax Core Widgets OpenGL Multimedia)
